# terminal-gui

./: .bumpversion.cfg  .coverage  .gitignore  README.md  main.py  menu_config.toml  pyproject.toml  setup.py
terminal_gui/: __init__.py  command_executor.py  config.py  menu.py  menu_components.py  menu_layout.py  menu_types.py  utils.py
tests/: __init__.py  conftest.py  test_command_executor.py  test_config.py  test_menu.py  test_menu_components.py  test_menu_config.toml  test_utils.py
