[project]
name = "terminal-gui"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0.50",
    "toml>=0.10.2",
    "urwid>=2.6.16",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "-v --cov=terminal_gui --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["terminal_gui"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError:",
]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
]

[tool.bumpversion]
current_version = "0.1.1"
commit = True
tag = True
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = [
    "{major}.{minor}.{patch}"
]

[tool.bumpversion.file "pyproject.toml"]
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
